src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>FinServ__Lead Process</fullName>
        <description>Consumer lead</description>
        <isActive>true</isActive>
    </businessProcesses>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <label>Decision Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>Next Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <formula>NOW()</formula>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedByMe__c</fullName>
        <formula>IF(  FinServ__ReferredByUser__c = $User.Id,True,False)</formula>
        <label>Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ExpressedInterest__c</fullName>
        <label>Expressed Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__ProductList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this Referral rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Referrals</relationshipLabel>
        <relationshipName>HouseholdReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PotentialValue__c</fullName>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Referrals</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LeadUserReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <description>Referrer score from internal/external referrer</description>
        <formula>IF(NOT(ISBLANK(FinServ__ReferredByUser__c)),FinServ__ReferredByUser__r.FinServ__ReferrerScore__c,IF(NOT(ISBLANK(FinServ__ReferredByContact__c)),FinServ__ReferredByContact__r.FinServ__ReferrerScore__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>RelatedLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Know_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>IF( Lead_Total__c &lt; 5,  IMAGE(&apos;/resource/Dollars/dollar_zero.png&apos;, &apos;zero&apos;) , 
 IF(Lead_Total__c &lt; 10, IMAGE(&apos;/resource/Dollars/dollar_one.png&apos;, &apos;one&apos;),
 IF(Lead_Total__c &lt; 15, IMAGE(&apos;/resource/Dollars/dollar_two.png&apos;, &apos;two&apos;) ,
 IF(Lead_Total__c &lt; 20, IMAGE(&apos;/resource/Dollars/dollar_three.png&apos;, &apos;three&apos;) ,
 IF(Lead_Total__c &lt; 25, IMAGE(&apos;/resource/Dollars/dollar_four.png&apos;, &apos;four&apos;) ,
 IMAGE(&apos;/resource/Dollars/dollar_five.png&apos;, &apos;five&apos;) ) ) ) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rank__c</fullName>
        <formula>IF( (  Lead_Total__c  &gt;15),&quot;High Priority&quot;, IF(AND( Lead_Total__c  &lt;16, Lead_Total__c  &gt; 5),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Total__c</fullName>
        <formula>Score1__c + Score2__c  +Score3__c + Score4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <formula>IF ( Know_Decision_Maker__c ,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score2__c</fullName>
        <formula>CASE(Decision_Timeframe__c  ,&quot;Immediately&quot;, 5, &quot;1-3 Months&quot;,4,&quot;3-6 Months&quot;, 3, &quot;6-12 Months&quot;, 2, &quot;Next Year&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Timeframe Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score3__c</fullName>
        <formula>IF( Project_Defined__c = True, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Defined Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <inlineHelpText>used for datapacks</inlineHelpText>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lead_Quality__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Referrals I Created</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Closed_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>FinServ__ReferrerScore__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <label>Closed Referrals I&apos;m Assigned</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_I_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <filters>
            <field>FinServ__CreatedByMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Referrals I Created</label>
    </listViews>
    <listViews>
        <fullName>FinServ__Open_Referrals_Im_Assigned</fullName>
        <columns>FULL_NAME</columns>
        <columns>FinServ__ExpressedInterest__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FinServ__PotentialValue__c</columns>
        <columns>FinServ__ReferredByUser__c</columns>
        <columns>FinServ__ReferredByContact__c</columns>
        <columns>FinServ__ReferrerScore__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Not Converted</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.FinServ__BusinessReferral,Lead.FinServ__Referral</value>
        </filters>
        <label>Open Referrals I&apos;m Assigned</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>FinServ__BusinessReferral</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <description>A business or organization that is a commercial banking business referral​</description>
        <label>Business Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Referral</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <description>A person, business, or organization that is a referral</description>
        <label>Person Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__RetirementPlanning</fullName>
        <active>true</active>
        <businessProcess>FinServ__Lead Process</businessProcess>
        <label>Retirement Planning</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
        AND( 
            OR($RecordType.DeveloperName = &quot;Referral&quot;, 
                $RecordType.DeveloperName = &quot;BusinessReferral&quot;),
            NOT(ISBLANK( FinServ__ReferredByUser__c )), 
            NOT(ISBLANK( FinServ__ReferredByContact__c )) 
        ), 
        AND ( 
            OR($RecordType.DeveloperName = &quot;Referral&quot;, 
                $RecordType.DeveloperName = &quot;BusinessReferral&quot;), 
            ISBLANK( FinServ__ReferredByUser__c ), 
            ISBLANK( FinServ__ReferredByContact__c ) 
        ) 
    )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
</CustomObject>